minor update wranple and plotting notes

--- a/data/wrangling/wrangle_notes.ipynb
+++ b/data/wrangling/wrangle_notes.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "5f06bb2e",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c70e648e",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        "(891, 15)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 5,
    "id": "c15932a1",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
        "(144, 3)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,8 +696,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
-   "id": "e8c930ef",
+   "execution_count": 23,
+   "id": "86ea54a6",
    "metadata": {},
    "outputs": [
     {
@@ -710,52 +710,121 @@
          "type": "string"
         },
         {
-         "name": "who",
+         "name": "size",
          "rawType": "int64",
          "type": "integer"
+        },
+        {
+         "name": "sum",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "mean",
+         "rawType": "float64",
+         "type": "float"
         }
        ],
-       "ref": "abeb78de-91c3-4290-9742-18bb15c215c9",
+       "ref": "d33714c7-ab06-4148-8b9e-61a7e2a30d50",
        "rows": [
         [
          "child",
-         "83"
+         "83",
+         "49",
+         "0.59"
         ],
         [
          "man",
-         "537"
+         "537",
+         "88",
+         "0.16"
         ],
         [
          "woman",
-         "271"
+         "271",
+         "205",
+         "0.76"
         ]
        ],
        "shape": {
-        "columns": 1,
+        "columns": 3,
         "rows": 3
        }
       },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>size</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>who</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>child</th>\n",
+       "      <td>83</td>\n",
+       "      <td>49</td>\n",
+       "      <td>0.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>man</th>\n",
+       "      <td>537</td>\n",
+       "      <td>88</td>\n",
+       "      <td>0.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>woman</th>\n",
+       "      <td>271</td>\n",
+       "      <td>205</td>\n",
+       "      <td>0.76</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "who\n",
-       "child     83\n",
-       "man      537\n",
-       "woman    271\n",
-       "Name: who, dtype: int64"
+       "       size  sum  mean\n",
+       "who                   \n",
+       "child    83   49  0.59\n",
+       "man     537   88  0.16\n",
+       "woman   271  205  0.76"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby(\"who\")[\"who\"].count()"
+    "df.groupby('who', dropna=False, observed=False)['survived'].agg(['size', 'sum', 'mean']).round({'mean': 2})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
-   "id": "b9c4f0c8",
+   "execution_count": 22,
+   "id": "5770584b",
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +852,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "80b561f5-90f7-405b-9d42-b2d10bfd8171",
+       "ref": "f7cf782d-fe76-4419-9f2b-0fa41c9420e8",
        "rows": [
         [
          "child",
@@ -870,21 +939,21 @@
        "woman   (91, 0.98)  (66, 0.91)  (114, 0.49)"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby([\"who\", \"class\"])[\"survived\"].agg(\n",
+    "df.groupby(['who', 'class'], dropna=False, observed=False)['survived'].agg(\n",
     "    lambda x: (len(x), float(x.mean().round(2)))\n",
     ").unstack()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
-   "id": "3b8ca116",
+   "execution_count": null,
+   "id": "a0f619fc",
    "metadata": {},
    "outputs": [
     {
@@ -902,11 +971,6 @@
          "type": "integer"
         },
         {
-         "name": "median_age",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
          "name": "survived_rate",
          "rawType": "float64",
          "type": "float"
@@ -917,56 +981,51 @@
          "type": "float"
         },
         {
-         "name": "survived_rate_of_man",
-         "rawType": "float64",
-         "type": "float"
+         "name": "class",
+         "rawType": "object",
+         "type": "string"
         }
        ],
-       "ref": "dac2d766-4815-4eec-a525-57558497ea05",
+       "ref": "93f91e49-39c2-42b7-9b15-2c5606e8dde0",
        "rows": [
         [
          "(0.419, 20.125]",
          "179",
-         "16.0",
          "0.46",
-         "35.0",
-         "0.13"
+         "0.35",
+         "Third"
         ],
         [
          "(20.125, 28.0]",
          "183",
-         "24.0",
          "0.36",
-         "66.0",
-         "0.16"
+         "0.66",
+         "Third"
         ],
         [
          "(28.0, 38.0]",
          "175",
-         "33.0",
          "0.43",
-         "65.0",
-         "0.22"
+         "0.65",
+         "Third"
         ],
         [
          "(38.0, 80.0]",
          "177",
-         "48.0",
          "0.37",
-         "66.0",
-         "0.17"
+         "0.66",
+         "First"
         ],
         [
          null,
          "177",
-         null,
          "0.29",
-         "70.0",
-         "0.13"
+         "0.7",
+         "Third"
         ]
        ],
        "shape": {
-        "columns": 5,
+        "columns": 4,
         "rows": 5
        }
       },
@@ -990,14 +1049,12 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>n</th>\n",
-       "      <th>median_age</th>\n",
        "      <th>survived_rate</th>\n",
        "      <th>pct_man</th>\n",
-       "      <th>survived_rate_of_man</th>\n",
+       "      <th>class</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>age_bin</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1008,58 +1065,53 @@
        "    <tr>\n",
        "      <th>(0.419, 20.125]</th>\n",
        "      <td>179</td>\n",
-       "      <td>16.0</td>\n",
        "      <td>0.46</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0.13</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>Third</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>(20.125, 28.0]</th>\n",
        "      <td>183</td>\n",
-       "      <td>24.0</td>\n",
        "      <td>0.36</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>0.16</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>Third</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>(28.0, 38.0]</th>\n",
        "      <td>175</td>\n",
-       "      <td>33.0</td>\n",
        "      <td>0.43</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>0.22</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>Third</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>(38.0, 80.0]</th>\n",
        "      <td>177</td>\n",
-       "      <td>48.0</td>\n",
        "      <td>0.37</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>0.17</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>First</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NaN</th>\n",
        "      <td>177</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>0.29</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>0.13</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>Third</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   n  median_age  survived_rate  pct_man  survived_rate_of_man\n",
-       "age_bin                                                                       \n",
-       "(0.419, 20.125]  179        16.0           0.46     35.0                  0.13\n",
-       "(20.125, 28.0]   183        24.0           0.36     66.0                  0.16\n",
-       "(28.0, 38.0]     175        33.0           0.43     65.0                  0.22\n",
-       "(38.0, 80.0]     177        48.0           0.37     66.0                  0.17\n",
-       "NaN              177         NaN           0.29     70.0                  0.13"
+       "                   n  survived_rate  pct_man  class\n",
+       "age_bin                                            \n",
+       "(0.419, 20.125]  179           0.46     0.35  Third\n",
+       "(20.125, 28.0]   183           0.36     0.66  Third\n",
+       "(28.0, 38.0]     175           0.43     0.65  Third\n",
+       "(38.0, 80.0]     177           0.37     0.66  First\n",
+       "NaN              177           0.29     0.70  Third"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,18 +1120,14 @@
     "df[\"age_bin\"] = pd.qcut(df[\"age\"], q=4)\n",
     "\n",
     "# groupby dict\n",
-    "df.groupby([\"age_bin\"], dropna=False, observed=False).agg(\n",
+    "df.groupby(['age_bin', ], dropna=False, observed=False).agg(\n",
     "    **{\n",
-    "        \"n\": (\"age_bin\", lambda x: len(x)),\n",
-    "        \"median_age\": (\"age\", lambda x: np.median(x)),\n",
-    "        \"survived_rate\": (\"survived\", lambda x: np.mean(x)),\n",
-    "        \"pct_man\": (\"who\", lambda x: x.isin([\"man\"]).sum() / len(x) * 100),\n",
-    "        \"survived_rate_of_man\": (\n",
-    "            \"survived\",\n",
-    "            lambda x: df.loc[x.index, :].query(\"who == 'man'\")[\"survived\"].mean(),\n",
-    "        ),\n",
+    "        'n': ('age_bin', 'size'),\n",
+    "        'survived_rate': ('survived', 'mean'),\n",
+    "        'pct_man': ('who', lambda x: x.isin(['man']).sum() / len(x)),\n",
+    "        'class': ('class', lambda x: df.loc[x.index, :]['class'].mode(),),\n",
     "    }\n",
-    ").round({\"survived_rate\": 2, \"pct_man\": 0, \"survived_rate_of_man\": 2})"
+    ").round({'survived_rate': 2, 'pct_man': 2})"
    ]
   },
   {
