--- a/plot/plotting/plotting_notes.ipynb
+++ b/plot/plotting/plotting_notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "59e6785c",
    "metadata": {},
    "outputs": [],
@@ -15,20 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "24869bd7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# matplotlib imports\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib as mpl\n",
-    "from matplotlib import ticker"
+    "import matplotlib as mpl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "1f26b3f4",
    "metadata": {},
    "outputs": [
@@ -38,7 +37,7 @@
        "(891, 15)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "bad383c1",
    "metadata": {},
    "outputs": [
@@ -74,7 +73,7 @@
          "type": "float"
         }
        ],
-       "ref": "26f94830-f099-4113-98ac-a63fde686700",
+       "ref": "84ee7864-6730-488c-bbb8-9b0b60641d8b",
        "rows": [
         [
          "0",
@@ -224,7 +223,7 @@
        "9  [461.096, 512.842)  1.000000"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "a62b271f",
    "metadata": {},
    "outputs": [
@@ -247,7 +246,7 @@
        "(144, 3)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "id": "d7853d49",
    "metadata": {},
    "outputs": [
@@ -277,7 +276,7 @@
        "[None, None, None, None, None, None, None, None, None, None]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -297,10 +296,9 @@
     "Y = pdf['survived']\n",
     "\n",
     "fig, axs = plt.subplots(2,2, figsize=(12, 8), sharex=True, sharey=True)\n",
-    "from matplotlib import ticker, ticker\n",
     "axs[0, 0].plot(X, Y, marker='o')\n",
-    "axs[0, 0].xaxis.set_major_locator(ticker.FixedLocator(X))\n",
-    "axs[0, 0].xaxis.set_major_formatter(ticker.FixedFormatter(pdf['fare_bin'].astype(str)))\n",
+    "axs[0, 0].xaxis.set_major_locator(mpl.ticker.FixedLocator(X))\n",
+    "axs[0, 0].xaxis.set_major_formatter(mpl.ticker.FixedFormatter(pdf['fare_bin'].astype(str)))\n",
     "plt.setp(axs[1, 0].get_xticklabels(), rotation=45)\n",
     "plt.setp(axs[1, 1].get_xticklabels(), rotation=45)"
    ]
@@ -454,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "418aff82",
    "metadata": {},
    "outputs": [
@@ -485,8 +483,8 @@
     "Y = pdf['survived']\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "ax.xaxis.set_major_locator(ticker.FixedLocator(X))\n",
-    "ax.xaxis.set_major_formatter(ticker.FixedFormatter(pdf['fare_bin'].astype(str)))\n",
+    "ax.xaxis.set_major_locator(mpl.Ticker.FixedLocator(X))\n",
+    "ax.xaxis.set_major_formatter(mpl.ticker.FixedFormatter(pdf['fare_bin'].astype(str)))\n",
     "plt.setp(ax.get_xticklabels(), rotation=45)\n",
     "\n",
     "ax.plot(X, Y, linestyle= '-')"
