update snippets for data wrangle

--- a/data/wrangling/wrangle_notes.ipynb
+++ b/data/wrangling/wrangle_notes.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5f06bb2e",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c70e648e",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        "(891, 15)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c15932a1",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
        "(144, 3)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "7c5eefcd",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
        "(891, 15)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "id": "01d6022f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "who",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "survived",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "e70d019d-f445-4252-b91c-16f2ba1285e7",
+       "rows": [
+        [
+         "man",
+         "0.16387337057728119"
+        ],
+        [
+         "child",
+         "0.5903614457831325"
+        ],
+        [
+         "woman",
+         "0.7564575645756457"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3
+       }
+      },
+      "text/plain": [
+       "who\n",
+       "man      0.163873\n",
+       "child    0.590361\n",
+       "woman    0.756458\n",
+       "Name: survived, dtype: float64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"who\", dropna=False, observed=False)[\"survived\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "86ea54a6",
    "metadata": {},
    "outputs": [
@@ -710,22 +768,22 @@
          "type": "string"
         },
         {
-         "name": "size",
+         "name": "('survived', 'size')",
          "rawType": "int64",
          "type": "integer"
         },
         {
-         "name": "sum",
+         "name": "('survived', 'sum')",
          "rawType": "int64",
          "type": "integer"
         },
         {
-         "name": "mean",
+         "name": "('survived', 'mean')",
          "rawType": "float64",
          "type": "float"
         }
        ],
-       "ref": "d33714c7-ab06-4148-8b9e-61a7e2a30d50",
+       "ref": "892900d9-19c1-4d78-8b58-088abad6b19d",
        "rows": [
         [
          "child",
@@ -762,13 +820,21 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">survived</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th></th>\n",
        "      <th>size</th>\n",
        "      <th>sum</th>\n",
@@ -805,25 +871,28 @@
        "</div>"
       ],
       "text/plain": [
-       "       size  sum  mean\n",
-       "who                   \n",
-       "child    83   49  0.59\n",
-       "man     537   88  0.16\n",
-       "woman   271  205  0.76"
+       "      survived           \n",
+       "          size  sum  mean\n",
+       "who                      \n",
+       "child       83   49  0.59\n",
+       "man        537   88  0.16\n",
+       "woman      271  205  0.76"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('who', dropna=False, observed=False)['survived'].agg(['size', 'sum', 'mean']).round({'mean': 2})"
+    "df.groupby(\"who\", dropna=False, observed=False).agg(\n",
+    "    {\"survived\": [\"size\", \"sum\", \"mean\"]}\n",
+    ").round({(\"survived\", \"mean\"): 2})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "id": "5770584b",
    "metadata": {},
    "outputs": [
@@ -852,7 +921,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "f7cf782d-fe76-4419-9f2b-0fa41c9420e8",
+       "ref": "523566eb-1f7b-43e7-95ba-8a0658be5974",
        "rows": [
         [
          "child",
@@ -939,13 +1008,13 @@
        "woman   (91, 0.98)  (66, 0.91)  (114, 0.49)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby(['who', 'class'], dropna=False, observed=False)['survived'].agg(\n",
+    "df.groupby([\"who\", \"class\"], dropna=False, observed=False)[\"survived\"].agg(\n",
     "    lambda x: (len(x), float(x.mean().round(2)))\n",
     ").unstack()"
    ]
@@ -1120,14 +1189,23 @@
     "df[\"age_bin\"] = pd.qcut(df[\"age\"], q=4)\n",
     "\n",
     "# groupby dict\n",
-    "df.groupby(['age_bin', ], dropna=False, observed=False).agg(\n",
+    "df.groupby(\n",
+    "    [\n",
+    "        \"age_bin\",\n",
+    "    ],\n",
+    "    dropna=False,\n",
+    "    observed=False,\n",
+    ").agg(\n",
     "    **{\n",
-    "        'n': ('age_bin', 'size'),\n",
-    "        'survived_rate': ('survived', 'mean'),\n",
-    "        'pct_man': ('who', lambda x: x.isin(['man']).sum() / len(x)),\n",
-    "        'class': ('class', lambda x: df.loc[x.index, :]['class'].mode(),),\n",
+    "        \"n\": (\"age_bin\", \"size\"),\n",
+    "        \"survived_rate\": (\"survived\", \"mean\"),\n",
+    "        \"pct_man\": (\"who\", lambda x: x.isin([\"man\"]).sum() / len(x)),\n",
+    "        \"class\": (\n",
+    "            \"class\",\n",
+    "            lambda x: df.loc[x.index, :][\"class\"].mode(),\n",
+    "        ),\n",
     "    }\n",
-    ").round({'survived_rate': 2, 'pct_man': 2})"
+    ").round({\"survived_rate\": 2, \"pct_man\": 2})"
    ]
   },
   {
