--- a/data/pandas_tute/index_select/multi_index.ipynb
+++ b/data/pandas_tute/index_select/multi_index.ipynb
@@ -2076,7 +2076,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### aggregation\n"
+    "### misc codes\n"
    ]
   },
   {
@@ -2084,7 +2084,121 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# indexing\n",
+    "###################\n",
+    "df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"A\": [1, 2, 3, 4, 5, 6],\n",
+    "        \"B\": [1, 2, 3, np.nan, np.nan, np.nan],\n",
+    "        \"C\": [1, 2, 3, 4, 5, 6],\n",
+    "        \"D\": [\"a\", \"b\", \"c\", \"d\", \"e\", \"f\"],\n",
+    "        \"float\": [1.0, 2.0, 3.0, 4.0, 5.0, 6.0],\n",
+    "        \"bool\": [True, False, True, False, True, False],\n",
+    "        \"date\": pd.date_range(\"20130101\", periods=6),\n",
+    "        \"string\": [\"a\", \"b\", \"c\", \"d\", \"e\", \"f\"],\n",
+    "    }\n",
+    ")\n",
+    "# add multi index\n",
+    "df = df.set_index([\"A\", \"B\"])\n",
+    "df\n",
+    "\n",
+    "df.isnull()\n",
+    "df.notnull()\n",
+    "df.isna()\n",
+    "df.notna()\n",
+    "\n",
+    "# select rows based on condition\n",
+    "df[df.C.between(1, 3)]\n",
+    "df.loc[df.C.isin([1, 2, 3])]\n",
+    "df.loc[df.C.isin([1, 2, 3]) & df.D.isin([\"a\", \"b\", \"c\"])]\n",
+    "\n",
+    "# select rows based on condition with multi index\n",
+    "df.loc[df.index.get_level_values(\"A\").isin([1, 2, 3])]\n",
+    "# index slice\n",
+    "df.loc[(slice(None), [1, 2, 3]), :]\n",
+    "# pd.indexSlice\n",
+    "df.loc[pd.IndexSlice[:, [1, 2, 3]], :]\n",
+    "df.loc[pd.IndexSlice[:, 1], :]\n",
+    "# loc with axis arg\n",
+    "df.loc(axis=0)[[1, 2, 3], :]\n",
+    "df.loc(axis=0)[1, :]\n",
+    "\n",
+    "# select cols based on col names\n",
+    "df[[\"C\", \"D\"]]\n",
+    "\n",
+    "# select cols based on col names regex\n",
+    "df.filter(regex=\"^C\")\n",
+    "\n",
+    "# select rows based on str col regex\n",
+    "df[df.D.str.contains(\"a|b|c\")]\n",
+    "\n",
+    "values = [\"a\", \"b\", \"c\"]\n",
+    "df[df.D.isin(values)]\n",
+    "\n",
+    "# filter rows based on date col\n",
+    "df[df.date.between(\"2013-01-01\", \"2013-01-03\")]\n",
+    "\n",
+    "# build grid df\n",
+    "###########################################\n",
+    "df = pd.DataFrame({\"a\": np.linspace(1, 10, 10), \"b\": np.linspace(1, 10, 10)})\n",
+    "df[\"C\"] = df.a + df.b + np.random.randint(1, 10, 10)\n",
+    "df[\"D\"] = df.a + df.b + np.random.randint(1, 10, 10)\n",
+    "df\n",
+    "\n",
+    "# set index of 2 column, then unstack\n",
+    "grid = df.set_index([\"a\", \"b\"]).unstack().loc[:, \"C\"]\n",
+    "grid\n",
+    "grid.values\n",
+    "\n",
+    "# df from meshgrid\n",
+    "a = np.linspace(1, 10, 10)\n",
+    "b = np.linspace(1, 10, 10)\n",
+    "\n",
+    "a, b = np.meshgrid(a, b)\n",
+    "\n",
+    "df = pd.DataFrame({\"a\": a.flatten(), \"b\": b.flatten()})\n",
+    "df[\"C\"] = df.a + df.b + np.random.randint(1, 10, 100)\n",
+    "df[\"D\"] = df.a + df.b + np.random.randint(1, 10, 100)\n",
+    "\n",
+    "df\n",
+    "\n",
+    "grid = df.set_index([\"a\", \"b\"]).unstack().loc[:, \"C\"]\n",
+    "grid\n",
+    "grid.values\n",
+    "\n",
+    "\n",
+    "# multi index on cols\n",
+    "###########################################\n",
+    "\n",
+    "# make pct df with multi index cols\n",
+    "import itertools\n",
+    "\n",
+    "dim1 = [\"a\", \"b\", \"c\"]\n",
+    "dim2 = [\"x\", \"y\", \"z\"]\n",
+    "dim3 = [\"i\", \"j\", \"k\"]\n",
+    "cols = list(itertools.product(dim1, dim2, dim3))\n",
+    "col = [x[0] for x in cols]\n",
+    "col2 = [x[1] for x in cols]\n",
+    "col3 = [x[2] for x in cols]\n",
+    "\n",
+    "df = pd.DataFrame({\"col\": col, \"col2\": col2, \"col3\": col3})\n",
+    "df[\"values\"] = np.random.randint(1, 10, 27)\n",
+    "pvt = df.pivot(index=\"col\", columns=[\"col2\", \"col3\"], values=\"values\")\n",
+    "\n",
+    "pvt\n",
+    "\n",
+    "# multi index column into column, with concatenated names\n",
+    "pvt.columns = [\"_\".join(x) for x in pvt.columns]\n",
+    "\n",
+    "# remove index name\n",
+    "pvt.index.name = None\n",
+    "\n",
+    "pvt\n"
+   ]
   },
   {
    "cell_type": "code",
