--- a/data/pandas_tute/index_select/query.ipynb
+++ b/data/pandas_tute/index_select/query.ipynb
@@ -251,7 +251,118 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\"A\": range(1, 6), \"B\": range(10, 0, -2), \"C C\": range(10, 5, -1)})\n",
+    "df\n",
+    "\n",
+    "df.query(\"A > B\")\n",
+    "df.query(\"B == `C C`\")\n",
+    "\n",
+    "n = 10\n",
+    "np.random.seed(0)\n",
+    "df = pd.DataFrame(np.random.rand(n, 3), columns=list(\"abc\"))\n",
+    "df\n",
+    "\n",
+    "df.query(\"(a < b) & (b < c)\")\n",
+    "\n",
+    "\n",
+    "np.random.seed(10)\n",
+    "df = pd.DataFrame(np.random.randint(n / 2, size=(n, 2)), columns=list(\"bc\"))\n",
+    "df.index.name = \"a\"\n",
+    "df\n",
+    "\n",
+    "df.query(\"a < b and b < c\")\n",
+    "\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "df = pd.DataFrame(np.random.randint(n, size=(n, 2)), columns=list(\"bc\"))\n",
+    "df\n",
+    "df.query(\"index < b < c\")\n",
+    "\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "n = 10\n",
+    "colors = np.random.choice([\"red\", \"green\"], size=n)\n",
+    "foods = np.random.choice([\"eggs\", \"ham\"], size=n)\n",
+    "index = pd.MultiIndex.from_arrays([colors, foods], names=[\"color\", \"food\"])\n",
+    "df = pd.DataFrame(np.random.randn(n, 2), index=index)\n",
+    "df\n",
+    "df.query('color == \"red\"')\n",
+    "\n",
+    "\n",
+    "df.index.names = [None, None]\n",
+    "df\n",
+    "df.query('ilevel_0 == \"red\"')\n",
+    "\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "df = pd.DataFrame(np.random.rand(n, 3), columns=list(\"abc\"))\n",
+    "df2 = pd.DataFrame(np.random.rand(n + 2, 3), columns=df.columns)\n",
+    "df\n",
+    "df2\n",
+    "\n",
+    "expr = \"0.0 <= a <= c <= 0.5\"\n",
+    "map(lambda frame: frame.query(expr), [df, df2])\n",
+    "\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "df = pd.DataFrame(np.random.randint(n, size=(n, 3)), columns=list(\"abc\"))\n",
+    "df\n",
+    "df.query(\"(a < b) & (b < c)\")\n",
+    "df.query(\"a < b & b < c\")\n",
+    "df.query(\"a < b and b < c\")\n",
+    "df.query(\"a < b < c\")\n",
+    "\n",
+    "\n",
+    "df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"a\": list(\"aabbccddeeff\"),\n",
+    "        \"b\": list(\"aaaabbbbcccc\"),\n",
+    "        \"c\": np.random.randint(5, size=12),\n",
+    "        \"d\": np.random.randint(9, size=12),\n",
+    "    }\n",
+    ")\n",
+    "df\n",
+    "df.query(\"a in b\")\n",
+    "df.query(\"a not in b\")\n",
+    "df.query(\"a in b and c < d\")\n",
+    "df.query('b == [\"a\", \"b\", \"c\"]')\n",
+    "df.query(\"c == [1, 2]\")\n",
+    "df.query(\"c != [1, 2]\")\n",
+    "df.query(\"[1, 2] in c\")\n",
+    "df.query(\"[1, 2] not in c\")\n",
+    "\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "df = pd.DataFrame(np.random.rand(n, 3), columns=list(\"abc\"))\n",
+    "df[\"bools\"] = np.random.rand(len(df)) > 0.5\n",
+    "df\n",
+    "df.query(\"~bools\")\n",
+    "df.query(\"not bools\")\n",
+    "df.query(\"not bools\") == df[~df[\"bools\"]]\n",
+    "df.query(\"a < b < c and (not bools) or bools > 2\")\n",
+    "\n",
+    "\n",
+    "# subset based on string value\n",
+    "df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"a_a\": [\"a_asdf\", \"b_asdf\", \"c_asdf\"],\n",
+    "        \"nb_b\": [1, 2, 3],\n",
+    "    }\n",
+    ")\n",
+    "df\n",
+    "\n",
+    "# select columns based on column name string value\n",
+    "df.filter(like=\"a_\")\n",
+    "df.filter(regex=\"a_\")\n",
+    "\n",
+    "# select rows based on column string value\n",
+    "df.loc[df.a_a.str.contains(\"a_\"), :]\n",
+    "df.query(\"a_a.str.contains('a_')\", engine=\"python\")\n"
+   ]
   },
   {
    "cell_type": "code",
