add filter and str to index select

--- a/data/pandas_tute/index_select/index_select_guide.ipynb
+++ b/data/pandas_tute/index_select/index_select_guide.ipynb
@@ -1105,7 +1105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## index operator `[]`\n",
+    "### index operator `[]`\n",
     "\n",
     "inputs:\n",
     "- label\n",
@@ -1465,7 +1465,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## index operator on the attribute `.loc[]`\n",
+    "### index operator on the attribute `.loc[]`\n",
     "\n",
     "inputs:\n",
     "- label\n",
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -2040,7 +2040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -2059,11 +2059,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### filter"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# select columns based on column name string value\n",
+    "df.filter(like=\"a_\")\n",
+    "df.filter(regex=\"a_\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### str accessor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select rows based on column string value\n",
+    "df.loc[df.a_a.str.contains(\"a_\"), :]\n"
+   ]
   },
   {
    "cell_type": "code",
